More rebar fix spam
Remove dependency on procket. procket was used only for testing.

--- a/rebar.config
+++ b/rebar.config
@@ -1,11 +1,13 @@
-{so_name, "everl.so"}.
-
-{port_envs, [
-    {"LDFLAGS", "$LDFLAGS -Lc_src"}
+{port_specs, [
+    {"priv/everl.so", [
+        "c_src/everl.c",
+        "c_src/everl_ev.c"
+        ]}
     ]}.
 
-{deps, [
-    {procket, ".*", {git, "git://github.com/msantos/procket.git", "master"}}
-]}.
+{port_env, [
+    {"LDFLAGS", "$LDFLAGS -Lc_src"},
+    {"CPPFLAGS", "$CPPFLAGS -Ic_src/libev"}
+    ]}.
 
 {port_cleanup_script, "rm c_src/*.a c_src/*.o"}.
